-- GENERATED FILE — do not hand-edit. Source of truth is
-- docs/postgres-schema-proposal.dbml; regenerate with:
--   npx -p @dbml/cli dbml2sql docs/postgres-schema-proposal.dbml --postgres -o scripts/postgres-normalized-schema.sql
-- (then restore this header, which the generator overwrites).
--
-- Applied by scripts/migrate-mongo-to-postgres-normalized.mjs — see that
-- script's header for usage. This is the NORMALIZED target schema, distinct
-- from scripts/migrate-mongo-to-postgres.schema.sql (the raw rehearsal dump).
--
-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL

CREATE TYPE "org_plan" AS ENUM (
  'starter',
  'growth',
  'enterprise'
);

CREATE TYPE "brand_status" AS ENUM (
  'PENDING',
  'APPROVED',
  'REJECTED'
);

CREATE TYPE "campaign_status" AS ENUM (
  'PENDING',
  'APPROVED',
  'REJECTED',
  'EXPIRED'
);

CREATE TYPE "collection_status" AS ENUM (
  'PENDING',
  'COMPLETED'
);

CREATE TYPE "deal_status" AS ENUM (
  'pending',
  'active',
  'rejected',
  'inactive',
  'expired'
);

CREATE TYPE "module_subscription_status" AS ENUM (
  'active',
  'trial',
  'expired',
  'cancelled'
);

CREATE TYPE "location_source" AS ENUM (
  'map_pin',
  'area_centroid',
  'city_centroid',
  'legacy_string',
  'collector_verified'
);

CREATE TYPE "location_precision" AS ENUM (
  'building',
  'block',
  'area',
  'city',
  'unknown'
);

CREATE TYPE "location_verification_status" AS ENUM (
  'unverified',
  'auto_verified',
  'user_corrected',
  'mismatch',
  'unresolved'
);

CREATE TYPE "snapshot_source" AS ENUM (
  'creation',
  'migrated'
);

CREATE TYPE "otp_purpose" AS ENUM (
  'password_reset',
  'email_verification'
);

CREATE TABLE "organizations" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "plan" org_plan NOT NULL DEFAULT 'starter',
  "created_at" timestamptz,
  "updated_at" timestamptz
);

CREATE TABLE "organization_module_subscriptions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "org_id" integer NOT NULL,
  "module" text NOT NULL,
  "status" module_subscription_status NOT NULL,
  "activated_at" timestamptz NOT NULL,
  "expires_at" timestamptz
);

CREATE TABLE "brandthemes" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "logo" text NOT NULL,
  "background_color" text NOT NULL,
  "accent_color" text NOT NULL,
  "status" text NOT NULL
);

CREATE TABLE "locations" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "province" text UNIQUE NOT NULL
);

CREATE TABLE "cities" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "location_id" integer NOT NULL,
  "name" text NOT NULL
);

CREATE TABLE "towns" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "city_id" integer NOT NULL,
  "name" text NOT NULL
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_name" text NOT NULL,
  "email" text UNIQUE NOT NULL,
  "password" text NOT NULL,
  "avatar" text NOT NULL DEFAULT '',
  "address" text NOT NULL DEFAULT '',
  "province" text NOT NULL DEFAULT '',
  "city" text NOT NULL DEFAULT '',
  "town" text NOT NULL DEFAULT '',
  "town_other" text NOT NULL DEFAULT '',
  "sub_area" text NOT NULL DEFAULT '',
  "sub_area_other" text NOT NULL DEFAULT '',
  "phone" text NOT NULL DEFAULT '',
  "mint_id" text UNIQUE NOT NULL,
  "role" text NOT NULL DEFAULT 'MEMBER',
  "latitude" text NOT NULL DEFAULT '',
  "longitude" text NOT NULL DEFAULT '',
  "device_token" text NOT NULL DEFAULT '',
  "points" integer NOT NULL DEFAULT 0,
  "total_collections" text NOT NULL DEFAULT '',
  "total_waste_collected" text NOT NULL DEFAULT '',
  "referral_reward_granted" boolean NOT NULL DEFAULT false,
  "profile_bonus_window_started_at" timestamptz,
  "profile_bonus_granted_at" timestamptz,
  "profile_bonus_points" integer,
  "created" timestamptz,
  "first_time_login" boolean NOT NULL DEFAULT true,
  "email_verified" boolean NOT NULL DEFAULT false,
  "apple_id" text UNIQUE
);

CREATE TABLE "user_locations" (
  "user_id" integer PRIMARY KEY,
  "lng" numeric,
  "lat" numeric,
  "source" location_source,
  "precision" location_precision,
  "accuracy_meters" numeric,
  "captured_at" timestamptz,
  "structured_city_id" text,
  "structured_area_id" text,
  "structured_block_id" text,
  "structured_area_other" text,
  "structured_block_other" text,
  "structured_house_no" text,
  "structured_street_or_block" text,
  "version" integer NOT NULL DEFAULT 0,
  "completed_at" timestamptz,
  "verification_status" location_verification_status,
  "verification_method" text,
  "verification_geocoded_area_raw" text,
  "verification_geocoded_area_id" text,
  "verification_selected_area_id" text,
  "verification_distance_meters" numeric,
  "verification_checked_at" timestamptz,
  "verification_resolved_by" text
);

CREATE TABLE "user_otp_flows" (
  "user_id" integer NOT NULL,
  "purpose" otp_purpose NOT NULL,
  "otp_hash" text,
  "expires_at" timestamptz,
  "attempts" integer NOT NULL DEFAULT 0,
  "last_sent_at" timestamptz,
  PRIMARY KEY ("user_id", "purpose")
);

CREATE TABLE "user_referrals" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "address" text NOT NULL,
  "created_at" timestamptz
);

CREATE TABLE "captains" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "phone" text NOT NULL,
  "email" text UNIQUE NOT NULL,
  "password" text NOT NULL,
  "avatar" text NOT NULL DEFAULT '',
  "national_id" text,
  "national_id_image" text,
  "role" text NOT NULL DEFAULT 'CAPTAIN',
  "device_token" text NOT NULL DEFAULT '',
  "created" timestamptz,
  "email_verified" boolean NOT NULL DEFAULT false,
  "verification_token" text
);

CREATE TABLE "logistics" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "phone" text NOT NULL,
  "email" text UNIQUE NOT NULL,
  "password" text NOT NULL,
  "avatar" text NOT NULL DEFAULT '',
  "role" text NOT NULL DEFAULT 'LOGISTIC',
  "device_token" text NOT NULL DEFAULT '',
  "created" timestamptz,
  "email_verified" boolean NOT NULL DEFAULT false,
  "verification_token" text
);

CREATE TABLE "pickups" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "collection_id" integer NOT NULL,
  "captain_id" integer NOT NULL,
  "occurred_at" timestamptz NOT NULL,
  "status" text NOT NULL,
  "comment" text NOT NULL DEFAULT '',
  "snapshot_address" text,
  "snapshot_province" text,
  "snapshot_city" text,
  "snapshot_town" text,
  "snapshot_town_other" text,
  "snapshot_sub_area" text,
  "snapshot_sub_area_other" text,
  "snapshot_structured_city_id" text,
  "snapshot_structured_area_id" text,
  "snapshot_structured_block_id" text,
  "snapshot_structured_area_other" text,
  "snapshot_structured_block_other" text,
  "snapshot_house_no" text,
  "snapshot_street_or_block" text,
  "snapshot_location_lng" numeric,
  "snapshot_location_lat" numeric,
  "snapshot_location_source" location_source,
  "snapshot_location_precision" location_precision,
  "snapshot_location_accuracy_meters" numeric,
  "snapshot_location_captured_at" timestamptz,
  "snapshot_source" snapshot_source,
  "snapshot_at" timestamptz
);

CREATE TABLE "pickup_items" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pickup_id" integer NOT NULL,
  "qr_code" text NOT NULL DEFAULT '',
  "weight" numeric NOT NULL DEFAULT 0
);

CREATE TABLE "brands" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "org_id" integer,
  "legacy_brand_id" integer,
  "company_name" text NOT NULL,
  "brand_name" text NOT NULL,
  "email" text UNIQUE NOT NULL,
  "logo" text,
  "theme_image" text,
  "category" text NOT NULL,
  "description" text NOT NULL DEFAULT '',
  "address" text NOT NULL DEFAULT '',
  "web_link" text NOT NULL,
  "app_link" text NOT NULL DEFAULT '',
  "contact_name" text NOT NULL,
  "phone" text NOT NULL,
  "registration_number" text UNIQUE NOT NULL,
  "domain" text NOT NULL DEFAULT '',
  "theme_color" text NOT NULL DEFAULT '#3B82F6',
  "status" brand_status NOT NULL DEFAULT 'PENDING',
  "role" text NOT NULL DEFAULT 'BRAND',
  "email_verified" boolean NOT NULL DEFAULT false,
  "verification_token" text,
  "created_at" timestamptz,
  "updated_at" timestamptz
);

CREATE TABLE "brand_environmental_stats" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "brand_id" integer NOT NULL,
  "is_snapshot" boolean NOT NULL DEFAULT false,
  "period_start" date,
  "period_end" date,
  "total_waste_kg" numeric NOT NULL,
  "co2_avoided_kg" numeric NOT NULL
);

CREATE TABLE "brand_environmental_material_breakdown" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "stat_id" integer NOT NULL,
  "material" text NOT NULL,
  "weight_kg" numeric NOT NULL
);

CREATE TABLE "campaigns" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "start_date" text,
  "end_date" text,
  "is_single_code" boolean NOT NULL DEFAULT false,
  "discount_percentage" text,
  "status" campaign_status NOT NULL DEFAULT 'PENDING',
  "brand_id" integer NOT NULL,
  "brand_registration" text NOT NULL DEFAULT '',
  "description" text,
  "campaign_type" text,
  "target_audience" text,
  "budget" numeric,
  "background_color" text,
  "badge" text,
  "subtitle" text,
  "banner" text
);

CREATE TABLE "campaign_discount_codes" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "campaign_id" integer NOT NULL,
  "code" text NOT NULL,
  "is_used" boolean NOT NULL DEFAULT false,
  "used_by_user_id" integer,
  "used_at" timestamptz
);

CREATE TABLE "campaign_addresses" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "campaign_id" integer NOT NULL,
  "province" text NOT NULL,
  "city" text NOT NULL,
  "town" text NOT NULL
);

CREATE TABLE "campaign_users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "campaign_id" integer NOT NULL,
  "user_id" integer NOT NULL
);

CREATE TABLE "collections" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "area" text NOT NULL,
  "city" text NOT NULL,
  "radius" text NOT NULL,
  "start_area_lat" text NOT NULL,
  "start_area_lang" text NOT NULL,
  "start_date" text NOT NULL,
  "status" collection_status NOT NULL DEFAULT 'PENDING'
);

CREATE TABLE "collection_users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "collection_id" integer NOT NULL,
  "user_id" integer NOT NULL
);

CREATE TABLE "collection_captains" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "collection_id" integer NOT NULL,
  "captain_id" integer NOT NULL,
  "date" text NOT NULL
);

CREATE TABLE "deals" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "brand_id" integer NOT NULL,
  "title" text NOT NULL,
  "description" text NOT NULL DEFAULT '',
  "discount_percentage" numeric,
  "discount_amount" numeric,
  "start_date" text,
  "end_date" text,
  "max_uses" integer,
  "current_uses" integer NOT NULL DEFAULT 0,
  "minimum_purchase" numeric,
  "status" deal_status NOT NULL DEFAULT 'pending',
  "created_at" timestamptz,
  "updated_at" timestamptz
);

CREATE TABLE "deal_codes" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "deal_id" integer NOT NULL,
  "code" text NOT NULL,
  "is_used" boolean NOT NULL DEFAULT false
);

CREATE TABLE "deal_users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "deal_id" integer NOT NULL,
  "user_id" integer NOT NULL
);

CREATE TABLE "deal_claims" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "deal_id" integer NOT NULL,
  "user_id" integer NOT NULL,
  "code" text NOT NULL,
  "claimed_at" timestamptz
);

CREATE TABLE "brandusers" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "org_id" integer NOT NULL,
  "email" text UNIQUE NOT NULL,
  "password_hash" text NOT NULL,
  "org_role" text NOT NULL,
  "created_at" timestamptz,
  "updated_at" timestamptz
);

CREATE TABLE "brand_user_module_access" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "brand_user_id" integer NOT NULL,
  "module" text NOT NULL,
  "permission" text NOT NULL
);

CREATE UNIQUE INDEX ON "organization_module_subscriptions" ("org_id", "module");

CREATE UNIQUE INDEX ON "cities" ("location_id", "name");

CREATE UNIQUE INDEX ON "towns" ("city_id", "name");

CREATE INDEX ON "user_referrals" ("address");

CREATE UNIQUE INDEX ON "user_referrals" ("user_id", "address");

CREATE INDEX "idx_brand_environmental_stats_brand" ON "brand_environmental_stats" ("brand_id");

CREATE UNIQUE INDEX ON "campaign_discount_codes" ("campaign_id", "code");

CREATE UNIQUE INDEX ON "deal_codes" ("deal_id", "code");

CREATE UNIQUE INDEX ON "brand_user_module_access" ("brand_user_id", "module", "permission");

COMMENT ON TABLE "organizations" IS 'Mongo collection: organizations. module_subscriptions normalized into organization_module_subscriptions.';

COMMENT ON TABLE "organization_module_subscriptions" IS 'Was organizations.moduleSubscriptions[]. One row per subscribed module.';

COMMENT ON TABLE "brandthemes" IS 'Mongo collection: brandthemes (unchanged — already flat).';

COMMENT ON TABLE "locations" IS 'Mongo collection: locations (province level). cities/towns normalized
out of the nested `cities` jsonb into their own tables below.
';

COMMENT ON TABLE "cities" IS 'Was locations.cities[].name';

COMMENT ON TABLE "towns" IS 'Was locations.cities[].towns[]';

COMMENT ON TABLE "users" IS 'Mongo collection: users. referrals[] and pickupHistory[] normalized
out into user_referrals / pickups below. location/structuredAddress/
locationVerification normalized out into user_locations (1:1) —
passwordReset/emailVerification normalized out into user_otp_flows.
See each table''s note for why it''s split rather than flattened here.
';

COMMENT ON COLUMN "users"."profile_bonus_granted_at" IS 'presence is the payout idempotency key';

COMMENT ON TABLE "user_locations" IS 'Split out from users rather than flattened: this was ~20 columns, all
optional (null until the user completes location capture — gated by
version/completed_at), always written and read together as one unit by
that flow. Keeping it on users would mean every basic user query (auth,
profile lookups, admin lists) carries 20 mostly-NULL columns it doesn''t
need, and "no row" here cleanly means "hasn''t set location yet" instead
of a wall of NULLs on the users row. location + structuredAddress +
locationVerification are merged into ONE table, not three, since all
three are 1:1 with the user and always move together in the same
capture/verification flow — no independent lifecycle or query pattern
justifies separating them further.
';

COMMENT ON COLUMN "user_locations"."user_id" IS 'FK to users.id, doubles as PK — enforces strict 1:1, no surrogate id needed';

COMMENT ON COLUMN "user_locations"."lng" IS 'GeoJSON coordinates[0]';

COMMENT ON COLUMN "user_locations"."lat" IS 'GeoJSON coordinates[1]';

COMMENT ON COLUMN "user_locations"."precision" IS 'only "building" is usable for routing';

COMMENT ON COLUMN "user_locations"."verification_geocoded_area_raw" IS 'NEVER collapse with selected_area_id — labelled geocoder-failure training data';

COMMENT ON TABLE "user_otp_flows" IS 'Was users.passwordReset and users.emailVerification — two Mongoose
sub-schemas with an IDENTICAL shape (otpHash, expiresAt, attempts,
lastSentAt), each existing only to serve a different OTP purpose. That''s
the same entity occurring twice, not two entities — merged into one
table discriminated by `purpose` rather than duplicated as two tables
(or, worse, kept as two column groups on users, which is what the
rehearsal-schema-derived draft originally did).

Mongoose hid these via select:false so the hash never leaks through a
default query; Postgres has no column-level equivalent for that. Since
this is now its own table, that guarantee is easy to restore: grant
the app''s normal runtime role no SELECT on this table at all, and read
otp_hash only through a SECURITY DEFINER function / a role that''s only
assumed for the specific OTP-check code path. Flattening this back onto
users would remove that option.
';

COMMENT ON COLUMN "user_otp_flows"."user_id" IS 'FK to users.id';

COMMENT ON TABLE "user_referrals" IS 'Was users.referrals[] (unbounded array, previously multikey-indexed).
POST /api/users/referrals does an `address IN (...)` style lookup
across ALL users — index on address, not just (user_id, address).
';

COMMENT ON TABLE "captains" IS 'Mongo collection: captains (unchanged — already flat).';

COMMENT ON TABLE "logistics" IS 'Mongo collection: logistics (unchanged — already flat).';

COMMENT ON TABLE "pickups" IS 'Was users.pickupHistory[]. Promoting this to its own table is what
fixes the rehearsal schema''s un-remapped-ObjectId bug: collection_id /
captain_id must be resolved to real integer FKs when the row is built,
instead of surviving as raw Mongo hex strings inside a jsonb blob.
';

COMMENT ON COLUMN "pickups"."snapshot_source" IS '"creation" = honest at-pickup-time snapshot, "migrated" = backfilled';

COMMENT ON TABLE "pickup_items" IS 'Was pickupHistory[].qrCodesWithWeights[]';

COMMENT ON TABLE "brands" IS 'Mongo collection: brands. environmentalStats/environmentalPeriods normalized below.';

COMMENT ON COLUMN "brands"."legacy_brand_id" IS 'self-reference; ETL must insert NULL first, then UPDATE in a second pass through the id map';

COMMENT ON TABLE "brand_environmental_stats" IS 'Merges brands.environmentalStats (single snapshot, is_snapshot=true,
null period bounds) and brands.environmentalPeriods[] (dated buckets,
is_snapshot=false) into one shape. At most one snapshot row per brand.
';

COMMENT ON COLUMN "brand_environmental_stats"."period_start" IS 'null when is_snapshot';

COMMENT ON COLUMN "brand_environmental_stats"."period_end" IS 'null when is_snapshot';

COMMENT ON TABLE "brand_environmental_material_breakdown" IS 'Was materialBreakdown[] nested inside environmentalStats/environmentalPeriods entries.';

COMMENT ON TABLE "campaigns" IS 'Mongo collection: campaigns. discountCodes[]/addresses[] normalized
below. `users` many-to-many carried via campaign_users (unchanged).
NOT resolved here: this table is structurally a Discount-shaped Deal
wearing a recycling-programme name (see docs/VOCABULARY.md) — that''s a
domain decision, left for explicit sign-off.
';

COMMENT ON TABLE "campaign_discount_codes" IS 'Was campaigns.discountCodes[] (plain string array, no redemption tracking).';

COMMENT ON TABLE "campaign_addresses" IS 'Was campaigns.addresses[]. Left as free text, not linked via FK into cities/towns — same registry-by-name caveat as users.structured_address.';

COMMENT ON TABLE "campaign_users" IS 'Join table for campaigns.users (unchanged from rehearsal schema).';

COMMENT ON TABLE "collections" IS 'Mongo collection: collections (unchanged structurally from rehearsal
schema — text-typed radius/lat/lng/date are flagged type debt, not
fixed here; see file header). `users`/`captainsWithDates` many-to-many
carried via collection_users / collection_captains.
';

COMMENT ON TABLE "collection_users" IS 'Join table for collections.users (unchanged from rehearsal schema).';

COMMENT ON TABLE "collection_captains" IS 'Join table for collections.captainsWithDates (unchanged from rehearsal schema).';

COMMENT ON TABLE "deals" IS 'Mongo collection: deals. codes[] normalized into deal_codes below;
promo_code dropped as a stored column (was a duplicate of codes[0] —
expose "the primary code" via a view over deal_codes instead of
storing it twice). `users`/`claims` many-to-many carried via
deal_users / deal_claims.
';

COMMENT ON TABLE "deal_codes" IS 'Was deals.codes[] (plain string array).';

COMMENT ON TABLE "deal_users" IS 'Join table for deals.users (unchanged from rehearsal schema).';

COMMENT ON TABLE "deal_claims" IS 'Join table for deals.claims. code now FKs into deal_codes so a claim cannot reference a code that was never issued.';

COMMENT ON TABLE "brandusers" IS 'Mongo collection: brandusers. moduleAccess[] normalized below.';

COMMENT ON TABLE "brand_user_module_access" IS 'Was brandusers.moduleAccess[].{module, permissions[]} — flattened to one row per (module, permission) pair.';

ALTER TABLE "cities" ADD FOREIGN KEY ("location_id") REFERENCES "locations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "towns" ADD FOREIGN KEY ("city_id") REFERENCES "cities" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_locations" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_otp_flows" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_referrals" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pickups" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pickups" ADD FOREIGN KEY ("collection_id") REFERENCES "collections" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pickups" ADD FOREIGN KEY ("captain_id") REFERENCES "captains" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "pickup_items" ADD FOREIGN KEY ("pickup_id") REFERENCES "pickups" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "brands" ADD FOREIGN KEY ("org_id") REFERENCES "organizations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "brands" ADD FOREIGN KEY ("legacy_brand_id") REFERENCES "brands" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "brand_environmental_stats" ADD FOREIGN KEY ("brand_id") REFERENCES "brands" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "brand_environmental_material_breakdown" ADD FOREIGN KEY ("stat_id") REFERENCES "brand_environmental_stats" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "campaigns" ADD FOREIGN KEY ("brand_id") REFERENCES "brands" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "campaign_discount_codes" ADD FOREIGN KEY ("campaign_id") REFERENCES "campaigns" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "campaign_discount_codes" ADD FOREIGN KEY ("used_by_user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "campaign_addresses" ADD FOREIGN KEY ("campaign_id") REFERENCES "campaigns" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "campaign_users" ADD FOREIGN KEY ("campaign_id") REFERENCES "campaigns" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "campaign_users" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "collection_users" ADD FOREIGN KEY ("collection_id") REFERENCES "collections" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "collection_users" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "collection_captains" ADD FOREIGN KEY ("collection_id") REFERENCES "collections" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "collection_captains" ADD FOREIGN KEY ("captain_id") REFERENCES "captains" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deals" ADD FOREIGN KEY ("brand_id") REFERENCES "brands" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deal_codes" ADD FOREIGN KEY ("deal_id") REFERENCES "deals" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deal_users" ADD FOREIGN KEY ("deal_id") REFERENCES "deals" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deal_users" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deal_claims" ADD FOREIGN KEY ("deal_id") REFERENCES "deals" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deal_claims" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "deal_claims" ADD FOREIGN KEY ("deal_id", "code") REFERENCES "deal_codes" ("deal_id", "code") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "organization_module_subscriptions" ADD FOREIGN KEY ("org_id") REFERENCES "organizations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "brandusers" ADD FOREIGN KEY ("org_id") REFERENCES "organizations" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "brand_user_module_access" ADD FOREIGN KEY ("brand_user_id") REFERENCES "brandusers" ("id") DEFERRABLE INITIALLY IMMEDIATE;
