// Proposed Postgres schema for the new Admin Backend (collection ops
// service): captain approval, collection creation/assignment, pickup
// execution records, and admin identity/RBAC. Paste into
// https://dbdiagram.io to render.
//
// This is a fresh schema for a NEW service/database, not an extension of
// mint-rewards-normalized (docs/postgres-schema-proposal.dbml). It becomes
// the source of truth for captains/collections/pickups going forward —
// Mint-Rewards-Backend's Mongo CaptainModel/CollectionModel/User.pickupHistory
// are superseded by this for those three entities. Consumer Users, Brands,
// Deals, and Campaigns are explicitly OUT of scope and stay in
// Mint-Rewards-Backend's Mongo for this pass — see admin-backend-schema.md
// for the full reasoning and open questions.
//
// Table order: a table with a foreign key comes after the table(s) it
// references.

Project mint_rewards_admin {
  database_type: 'PostgreSQL'
  Note: '''
    Schema for the new admin backend: captain approval workflow, collection
    lifecycle and assignment, pickup execution records, admin identity/RBAC,
    and an admin action audit log. Companion doc: admin-backend-schema.md.
  '''
}

Enum admin_status {
  ACTIVE
  DISABLED
}

Enum captain_status {
  PENDING
  APPROVED
  REJECTED
  SUSPENDED
  REMOVED
}

Enum collection_status {
  UPCOMING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Table admin_roles {
  id integer [pk, increment]
  name text [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Note: 'e.g. "Super Admin", "Ops Admin". What a role can do is data (admin_role_permissions), not a deploy.'
}

Table admin_permissions {
  id integer [pk, increment]
  key text [not null, unique]
  description text [not null, default: '']

  Note: 'Granular permission keys, e.g. captains.approve, collections.delete, admins.manage.'
}

Table admin_role_permissions {
  id integer [pk, increment]
  role_id integer [not null]
  permission_id integer [not null]

  Note: 'Join table: which permissions a role grants.'

  indexes {
    (role_id, permission_id) [unique]
  }
}

Table admins {
  id integer [pk, increment]
  name text [not null]
  email text [not null, unique]
  password_hash text [not null]
  avatar text [not null, default: '']
  role_id integer [not null]
  status admin_status [not null, default: 'ACTIVE']
  created_at timestamptz [not null, default: `now()`]
  last_login_at timestamptz

  Note: 'Admin login accounts (the "Welcome Back! Admin" login screen).'
}

Table captains {
  id integer [pk, increment]
  name text [not null]
  phone text [not null]
  email text [not null, unique]
  password_hash text [not null]
  avatar text [not null, default: '']
  national_id text
  national_id_image text
  device_token text [not null, default: '']
  status captain_status [not null, default: 'PENDING']
  email_verified boolean [not null, default: false]
  verification_token text
  approved_by integer
  approved_at timestamptz
  rejected_reason text
  created_at timestamptz [not null, default: `now()`]

  Note: '''
    Captains self-register (PENDING) and an admin approves/rejects
    (approved_by/approved_at, or rejected_reason). "Approved Captains" in the
    dashboard mockup is status = APPROVED. Deleting a captain (the trash icon
    in the mockup) is a SOFT delete — status -> REMOVED — never a row delete,
    because collections.captain_id and pickups.captain_id must keep resolving
    for historical collections/pickups a removed captain used to run.
    Display id "CPT-001" is derived from id at the API layer, not stored.
  '''
}

Table collections {
  id integer [pk, increment]
  name text [not null]
  area text [not null]
  city text [not null]
  radius numeric [not null]
  start_area_lat numeric [not null]
  start_area_lng numeric [not null]
  start_date date [not null]
  status collection_status [not null, default: 'UPCOMING']
  captain_id integer
  created_by integer [not null]
  created_at timestamptz [not null, default: `now()`]

  Note: '''
    One captain per collection (captain_id, nullable until assigned) —
    replaces the old captainsWithDates[] many-to-many-with-date pattern.
    status is DERIVED, not admin-set directly: UPCOMING -> IN_PROGRESS the
    moment the first pickups row lands for this collection; -> COMPLETED
    when a pickups row exists for every collection_users row (see
    admin-backend-schema.md — flagged there for explicit confirmation).
    CANCELLED is the one admin-initiated transition, valid from any
    non-COMPLETED state. radius/lat/lng are numeric here (fixing the
    text-typed debt inherited from the Mongoose CollectionSchema).
  '''
}

Table collection_users {
  id integer [pk, increment]
  collection_id integer [not null]
  user_id text [not null]
  added_at timestamptz [not null, default: `now()`]

  Note: '''
    user_id is the CONSUMER User's existing Mongo ObjectId, stored as opaque
    text — NOT a foreign key. Users are out of scope for this migration and
    remain authoritative in Mint-Rewards-Backend's Mongo; this table cannot
    enforce referential integrity against that external store.
  '''

  indexes {
    (collection_id, user_id) [unique]
  }
}

Table pickups {
  id integer [pk, increment]
  collection_id integer [not null]
  user_id text [not null]
  captain_id integer [not null]
  occurred_at timestamptz [not null, default: `now()`]
  status text [not null]
  comment text [not null, default: '']

  Note: '''
    One row per household visited during a collection run. user_id is the
    same external Mongo ObjectId reference as collection_users.user_id, same
    no-FK caveat. Insert of the first pickups row for a collection is what
    flips that collection to IN_PROGRESS.
  '''
}

Table pickup_items {
  id integer [pk, increment]
  pickup_id integer [not null]
  qr_code text [not null, default: '']
  weight numeric [not null, default: 0]

  Note: 'One row per QR-coded bag/item weighed during a pickup. Was qrCodesWithWeights[] in the old Mongoose pickupHistory entry.'
}

Table admin_audit_log {
  id integer [pk, increment]
  admin_id integer
  action text [not null]
  entity_type text [not null]
  entity_id text [not null]
  metadata jsonb
  created_at timestamptz [not null, default: `now()`]

  Note: '''
    One row per admin-initiated mutation (captain.approve, captain.reject,
    captain.remove, collection.create, collection.assign_captain,
    collection.cancel, admin.create, ...). admin_id nullable to allow future
    system-initiated entries (e.g. an automated IN_PROGRESS/COMPLETED
    transition) without forcing a fake admin actor.
  '''
}

Ref: admin_role_permissions.role_id > admin_roles.id
Ref: admin_role_permissions.permission_id > admin_permissions.id
Ref: admins.role_id > admin_roles.id

Ref: captains.approved_by > admins.id

Ref: collections.captain_id > captains.id
Ref: collections.created_by > admins.id
Ref: collection_users.collection_id > collections.id

Ref: pickups.collection_id > collections.id
Ref: pickups.captain_id > captains.id
Ref: pickup_items.pickup_id > pickups.id

Ref: admin_audit_log.admin_id > admins.id
